--- a/E-Commerce511/Views/Home/Index.cshtml
+++ b/E-Commerce511/Views/Home/Index.cshtml
@@ -15,18 +15,17 @@
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            @foreach(var item in Model) {
                 <div class="col mb-5">
                 <div class="card h-100">
                     <!-- Sale badge-->
-                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">@item.Category.Name</div>
+                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Category Name</div>
                     <!-- Product image-->
-                    <img class="card-img-top" src="~/images/@item.Img" alt="..." />
+                    <img class="card-img-top" src="#" alt="..." />
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">@item.Name</h5>
+                            <h5 class="fw-bolder">Name</h5>
                             <!-- Product reviews-->
                             @* <div class="d-flex justify-content-center small text-warning mb-2"> *@
                             @*     <div class="bi-star-fill"></div> *@
@@ -36,7 +35,7 @@
                             @*     <div class="bi-star-fill"></div> *@
                             @* </div> *@
                             <!-- Product price-->
-                            @item.Price.ToString("c")
+                            Price
                         </div>
                     </div>
                     <!-- Product actions-->
@@ -45,7 +44,6 @@
                     </div>
                 </div>
             </div>
-            }
         </div>
     </div>
 </section>
