--- a/E-Commerce511/Views/Home/Index.cshtml
+++ b/E-Commerce511/Views/Home/Index.cshtml
@@ -15,17 +15,18 @@
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+            @foreach(var item in Model) {
                 <div class="col mb-5">
                 <div class="card h-100">
                     <!-- Sale badge-->
-                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Category Name</div>
+                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">@item.Category.Name</div>
                     <!-- Product image-->
-                    <img class="card-img-top" src="#" alt="..." />
+                    <img class="card-img-top" src="~/images/@item.Img" alt="..." />
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Name</h5>
+                            <h5 class="fw-bolder">@item.Name</h5>
                             <!-- Product reviews-->
                             @* <div class="d-flex justify-content-center small text-warning mb-2"> *@
                             @*     <div class="bi-star-fill"></div> *@
@@ -35,15 +36,16 @@
                             @*     <div class="bi-star-fill"></div> *@
                             @* </div> *@
                             <!-- Product price-->
-                            Price
+                            @item.Price.ToString("c")
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/Home/Details?productId=@item.Id">Show Details</a></div>
                     </div>
                 </div>
             </div>
+            }
         </div>
     </div>
 </section>
