--- a/E-Commerce511/Views/Home/Details.cshtml
+++ b/E-Commerce511/Views/Home/Details.cshtml
@@ -28,7 +28,7 @@
         <h2 class="fw-bolder mb-4">Related products</h2>
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 
-            @foreach (var item in Model.ProductsWithCategories)
+            @foreach (var item in Model.Related)
             {
                 <div class="col mb-5">
                     <div class="card h-100">
