Improve Home Page

--- a/E-Commerce511/Views/Home/Index.cshtml
+++ b/E-Commerce511/Views/Home/Index.cshtml
@@ -2,49 +2,104 @@
     ViewData["Title"] = "Home Page";
 }
 
-<!-- Header-->
+<!-- Header -->
 <header class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
             <h1 class="display-4 fw-bolder">Shop in style</h1>
-            <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+            <p class="lead fw-normal text-white-50 mb-0">With this shop homepage template</p>
         </div>
     </div>
 </header>
-<!-- Section-->
+
+<!-- Filter Section -->
+<section class="py-4 bg-light">
+    <div class="container px-4 px-lg-5">
+        <form>
+            <div class="row">
+                <!-- Category Filter -->
+                <div class="col-md-3">
+                    <select name="categoryName" class="form-select">
+                        <option>All Categories</option>
+
+                        @foreach (var item in ViewBag.categories)
+                        {
+                            <option value="@item.Name">@item.Name</option>
+                        }
+
+                    </select>
+                </div>
+
+                <!-- Rating Filter -->
+                <div class="col-md-2">
+                    <select class="form-select">
+                        <option>All Ratings</option>
+                        <option>Option 1</option>
+                        <option>Option 2</option>
+                        <option>Option 3</option>
+                    </select>
+                </div>
+
+                <!-- Search by Name -->
+                <div class="col-md-3">
+                    <input type="text" class="form-control" placeholder="Search by name" name="productName" />
+                </div>
+
+                <!-- Price Range Filter -->
+                <div class="col-md-2">
+                    <input type="number" class="form-control" placeholder="Min Price" />
+                </div>
+                <div class="col-md-2">
+                    <input type="number" class="form-control" placeholder="Max Price" />
+                </div>
+
+                <!-- Submit Button -->
+                <div class="col-md-2 mt-2">
+                    <button type="submit" class="btn btn-dark w-100">Filter</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</section>
+
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            @foreach(var item in Model) {
+            @foreach (var item in Model)
+            {
                 <div class="col mb-5">
-                <div class="card h-100">
-                    <!-- Sale badge-->
-                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">@item.Category.Name</div>
-                    <!-- Product image-->
-                    <img class="card-img-top" src="~/images/@item.Img" alt="..." />
-                    <!-- Product details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Product name-->
-                            <h5 class="fw-bolder">@item.Name</h5>
-                            <!-- Product reviews-->
-                            @* <div class="d-flex justify-content-center small text-warning mb-2"> *@
-                            @*     <div class="bi-star-fill"></div> *@
-                            @*     <div class="bi-star-fill"></div> *@
-                            @*     <div class="bi-star-fill"></div> *@
-                            @*     <div class="bi-star-fill"></div> *@
-                            @*     <div class="bi-star-fill"></div> *@
-                            @* </div> *@
-                            <!-- Product price-->
-                            @item.Price.ToString("c")
+                    <div class="card h-100">
+                        <!-- Sale badge-->
+                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">@item.Category.Name</div>
+                        <!-- Discount badge-->
+                        @* @if (item.Discount > 0.15m) { *@
+                        @*     <div class="badge bg-danger text-white position-absolute" style="top: 0.5rem; left: 0.5rem">HOT</div> *@
+                        @* } *@
+                        <!-- Product image-->
+                        <img class="card-img-top" src="~/images/@item.Img" alt="..." />
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <h5 class="fw-bolder">@item.Name</h5>
+                                <!-- Product reviews-->
+                                @* <div class="d-flex justify-content-center small text-warning mb-2"> *@
+                                @*     <div class="bi-star-fill"></div> *@
+                                @*     <div class="bi-star-fill"></div> *@
+                                @*     <div class="bi-star-fill"></div> *@
+                                @*     <div class="bi-star-fill"></div> *@
+                                @*     <div class="bi-star-fill"></div> *@
+                                @* </div> *@
+                                <!-- Product price-->
+                                @item.Price.ToString("c")
+                            </div>
+                        </div>
+                        <!-- Product actions-->
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/Home/Details?productId=@item.Id">Show Details</a></div>
                         </div>
                     </div>
-                    <!-- Product actions-->
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/Home/Details?productId=@item.Id">Show Details</a></div>
-                    </div>
                 </div>
-            </div>
             }
         </div>
     </div>
