--- a/E-Commerce511/Areas/Admin/Views/Category/Create.cshtml
+++ b/E-Commerce511/Areas/Admin/Views/Category/Create.cshtml
@@ -1,18 +1,16 @@
 ﻿<div class="container my-3">
     <div class="row">
         <div class="col-12 d-flex justify-content-between align-items-center">
-            <h1>Edit Product</h1>
+            <h1>Create Product</h1>
         </div>
     </div>
 
     <div class="row mt-3">
         <div class="col-12">
-            <form action="/Admin/Category/Edit" method="post">
-                <input type="hidden" class="form-control" name="Id" value="@Model.Id">
-
+            <form action="/Admin/Category/Create" method="post">
                 <div class="mb-3">
                     <label for="Name" class="form-label">Catgegory Name</label>
-                    <input type="text" class="form-control" id="Name" name="Name" value="@Model.Name">
+                    <input type="text" class="form-control" id="Name" name="Name">
                 </div>
                 <button type="submit" class="btn btn-primary">Save</button>
             </form>
