UD Operations on Product Model

--- a/E-Commerce511/Areas/Admin/Views/Product/Index.cshtml
+++ b/E-Commerce511/Areas/Admin/Views/Product/Index.cshtml
@@ -32,7 +32,7 @@
                                 <td>@item.Quantity</td>
                                 <td>@item.Category.Name</td>
                                 <td>
-                                    <a class="btn btn-warning btn-sm" href="/Admin/Product/Edit?catgeoryId=@item.Id">Edit</a>
+                                    <a class="btn btn-warning btn-sm" href="/Admin/Product/Edit?productId=@item.Id">Edit</a>
                                     <button class="btn btn-danger btn-sm" onclick="confirmDelete(@item.Id)">Delete</button>
                                 </td>
                             </tr>
