--- a/E-Commerce511/Areas/Admin/Views/Product/Edit.cshtml
+++ b/E-Commerce511/Areas/Admin/Views/Product/Edit.cshtml
@@ -1,43 +1,58 @@
-﻿<div class="container my-3">
+﻿@model Product
+
+<div class="container my-3">
     <div class="row">
         <div class="col-12 d-flex justify-content-between align-items-center">
-            <h1>Create Product</h1>
+            <h1>Edit Product</h1>
         </div>
     </div>
 
     <div class="row mt-3">
         <div class="col-12">
             <form method="post" enctype="multipart/form-data">
+                <input type="hidden" name="Id" value="@Model.Id" />
+
                 <div class="mb-3">
                     <label for="Name" class="form-label">Product Name</label>
-                    <input type="text" class="form-control" id="Name" name="Name">
+                    <input type="text" class="form-control" id="Name" name="Name" value="@Model.Name">
                 </div>
                 <div class="mb-3">
                     <label for="Description" class="form-label">Product Description</label>
-                    <input type="text" class="form-control" id="Description" name="Description">
+                    <input type="text" class="form-control" id="Description" name="Description" value="@Model.Description">
                 </div>
                 <div class="mb-3">
                     <label for="Price" class="form-label">Product Price</label>
-                    <input type="number" class="form-control" id="Price" name="Price">
+                    <input type="number" class="form-control" id="Price" name="Price" value="@Model.Price">
                 </div>
                 <div class="mb-3">
                     <label for="Img" class="form-label">Product Img</label>
-                    <input type="file" class="form-control" id="Img" name="file" accept="image/*" onchange="previewImage(event)">
-                    <div class="mt-3">
-                        <img id="imgPreview" src="#" alt="Image Preview" style="max-width: 20%; height: auto; display: none;" />
+                    <input type="file" class="form-control" id="Img" name="file" value="@Model.Img" accept="image/*" onchange="previewImage(event)">
+                    <div class="mt-3 position-relative" style="max-width: 20%;">
+                        <img id="imgPreview" src="~/images/@Model.Img" alt="Image Preview" style="width: 100%; height: auto; display: block;" />
+                        <a href="/Admin/Product/DeleteImg?productId=@Model.Id" class="btn btn-danger btn-sm position-absolute top-0 end-0" style="transform: translate(50%, -50%);" onclick="deleteImage()">X</a>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="Quantity" class="form-label">Product Quantity</label>
-                    <input type="number" class="form-control" id="Quantity" name="Quantity">
+                    <input type="number" class="form-control" id="Quantity" name="Quantity" value="@Model.Quantity">
                 </div>
                 <div class="mb-3">
                     <label for="CategoryId" class="form-label">Product Category Name</label>
+
                     <select name="CategoryId" class="form-select">
+
                         @foreach (var item in ViewData["Categories"] as List<Category>)
                         {
-                            <option value="@item.Id">@item.Name</option>
+                            if (item.Id == Model.CategoryId)
+                            {
+                                <option value="@item.Id" selected>@item.Name</option>
+                            }
+                            else
+                            {
+                                <option value="@item.Id">@item.Name</option>
+                            }
                         }
+
                     </select>
                 </div>
                 <button type="submit" class="btn btn-primary">Save</button>
@@ -61,5 +76,12 @@
             imgPreview.style.display = 'none';
             imgPreview.src = '';
         }
+    }
+
+    function deleteImage() {
+        const imgPreview = document.getElementById('imgPreview');
+        imgPreview.src = '';
+        imgPreview.style.display = 'none';
+        document.getElementById('Img').value = '';
     }
 </script>
