--- a/E-Commerce511/Areas/Admin/Views/Category/Create.cshtml
+++ b/E-Commerce511/Areas/Admin/Views/Category/Create.cshtml
@@ -1,7 +1,9 @@
-﻿<div class="container my-3">
+﻿@model Category
+
+<div class="container my-3">
     <div class="row">
         <div class="col-12 d-flex justify-content-between align-items-center">
-            <h1>Create Product</h1>
+            <h1>Create Category</h1>
         </div>
     </div>
 
@@ -10,7 +12,8 @@
             <form action="/Admin/Category/Create" method="post">
                 <div class="mb-3">
                     <label for="Name" class="form-label">Catgegory Name</label>
-                    <input type="text" class="form-control" id="Name" name="Name">
+                    <input type="text" class="form-control" id="Name" name="Name" value="@Model.Name">
+                    <span class="text-danger" asp-validation-for="Name"></span>
                 </div>
                 <button type="submit" class="btn btn-primary">Save</button>
             </form>
