--- a/E-Commerce511/Areas/Admin/Views/Product/Create.cshtml
+++ b/E-Commerce511/Areas/Admin/Views/Product/Create.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="container my-3">
+﻿@model Product
+
+<div class="container my-3">
     <div class="row">
         <div class="col-12 d-flex justify-content-between align-items-center">
             <h1>Create Product</h1>
@@ -10,35 +12,47 @@
             <form method="post" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="Name" class="form-label">Product Name</label>
-                    <input type="text" class="form-control" id="Name" name="Name">
+                    <input type="text" class="form-control" id="Name" name="Name" value="@Model.Name">
+                    <span class="text-danger" asp-validation-for="Name"></span>
                 </div>
                 <div class="mb-3">
                     <label for="Description" class="form-label">Product Description</label>
-                    <input type="text" class="form-control" id="Description" name="Description">
+                    <input type="text" class="form-control" id="Description" name="Description" value="@Model.Description">
+                    <span class="text-danger" asp-validation-for="Description"></span>
                 </div>
                 <div class="mb-3">
                     <label for="Price" class="form-label">Product Price</label>
-                    <input type="number" class="form-control" id="Price" name="Price">
+                    <input type="number" class="form-control" id="Price" name="Price" value="@Model.Price">
+                    <span class="text-danger" asp-validation-for="Price"></span>
                 </div>
                 <div class="mb-3">
                     <label for="Img" class="form-label">Product Img</label>
-                    <input type="file" class="form-control" id="Img" name="file" accept="image/*" onchange="previewImage(event)">
+                    <input type="file" class="form-control" id="Img" name="file" accept="image/*" onchange="previewImage(event)" value="@Model.Img">
                     <div class="mt-3">
                         <img id="imgPreview" src="#" alt="Image Preview" style="max-width: 20%; height: auto; display: none;" />
                     </div>
+                    <span class="text-danger" asp-validation-for="Img"></span>
                 </div>
                 <div class="mb-3">
                     <label for="Quantity" class="form-label">Product Quantity</label>
-                    <input type="number" class="form-control" id="Quantity" name="Quantity">
+                    <input type="number" class="form-control" id="Quantity" name="Quantity" value="@Model.Quantity">
                 </div>
                 <div class="mb-3">
                     <label for="CategoryId" class="form-label">Product Category Name</label>
                     <select name="CategoryId" class="form-select">
                         @foreach (var item in ViewData["Categories"] as List<Category>)
                         {
-                            <option value="@item.Id">@item.Name</option>
+                            if (item.Id == Model.CategoryId)
+                            {
+                                <option value="@item.Id" selected>@item.Name</option>
+                            }
+                            else
+                            {
+                                <option value="@item.Id">@item.Name</option>
+                            }
                         }
                     </select>
+                    <span class="text-danger" asp-validation-for="CategoryId"></span>
                 </div>
                 <button type="submit" class="btn btn-primary">Save</button>
             </form>
