Client Side Validation

--- a/E-Commerce511/Views/Shared/_AdminLayout.cshtml
+++ b/E-Commerce511/Views/Shared/_AdminLayout.cshtml
@@ -57,6 +57,7 @@
                             <nav class="sb-sidenav-menu-nested nav">
                                 <a class="nav-link" href="/Admin/Category/Index">Categories</a>
                                 <a class="nav-link" href="/Admin/Product/Index">Products</a>
+                                <a class="nav-link" href="/Admin/Company/Index">Companies</a>
                             </nav>
                         </div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
@@ -135,6 +136,7 @@
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
     <script src="~/js/datatables-simple-demo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
