--- a/E-Commerce511/Areas/Admin/Views/Category/Index.cshtml
+++ b/E-Commerce511/Areas/Admin/Views/Category/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="container my-3">
+﻿
+
+<div class="container my-3">
     <div class="row">
         <div class="col-12 d-flex justify-content-between align-items-center">
             <h1>All Categories</h1>
@@ -38,6 +40,12 @@
 
 
 @section Scripts {
+    @* @if(@TempData["notifaction"] != null) { *@
+        <script>
+        toastr.success('@Context.Request.Cookies["notifaction"]')
+        </script>
+    @* } *@
+
     <script>
         function confirmDelete(categoryId) {
             Swal.fire({
