--- a/E-Commerce511/Views/Shared/_Layout.cshtml
+++ b/E-Commerce511/Views/Shared/_Layout.cshtml
@@ -22,15 +22,11 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4 d-flex flex-grow-1">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/Customer/Home/Index">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">All Products</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
-                            </ul>
-                        </li>
+
+                        @if(User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
+                        {
+                            <li class="nav-item"><a class="nav-link" href="/Admin">Management System</a></li>
+                        }
                     </ul>
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
