--- a/E-Commerce511/Views/Shared/_AdminLayout.cshtml
+++ b/E-Commerce511/Views/Shared/_AdminLayout.cshtml
@@ -59,6 +59,7 @@
                                 <a class="nav-link" href="/Admin/Category/Index">Categories</a>
                                 <a class="nav-link" href="/Admin/Product/Index">Products</a>
                                 <a class="nav-link" href="/Admin/Company/Index">Companies</a>
+                                <a class="nav-link" href="/Admin/User/Index?page=1">Companies</a>
                             </nav>
                         </div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
