--- a/E-Commerce511/Areas/Admin/Views/User/Index.cshtml
+++ b/E-Commerce511/Areas/Admin/Views/User/Index.cshtml
@@ -55,12 +55,12 @@
     </div>
 </div>
 
-<div class="row">
-    <nav aria-label="Page navigation example">
-        <ul class="pagination">
-            @for (int i = 0; i < ViewBag.totalPages; i++)
+<div class="row d-flex ">
+    <nav aria-label="Page navigation example ">
+        <ul class="pagination justify-content-center">
+            @for (int i = 0; i <= ViewBag.totalPages; i++)
             {
-                <li class="page-item"><a class="page-link" href="/Admin/Index?page=@i">@i</a></li>
+                <li class="page-item"><a class="page-link" href="/Admin/User/Index?page=@(i+1)">@(i+1)</a></li>
 
             }
         </ul>
