--- a/E-Commerce511/Areas/Customer/Views/Cart/Index.cshtml
+++ b/E-Commerce511/Areas/Customer/Views/Cart/Index.cshtml
@@ -1,17 +1,7 @@
-﻿@model List<Order>
+﻿@model List<Cart>
 <form method="post">
     <br />
     <div class="card shadow border-0">
-        <div class="card-header bg-secondary bg-gradient text-light ml-0 py-4">
-            <div class="row px-4">
-                <div class="col-6">
-                    <h5 class="pt-2 text-white">
-                        Shopping Cart
-                    </h5>
-                </div>
-
-            </div>
-        </div>
         <div class="card-body my-4">
             <div class="row">
             </div>
@@ -40,10 +30,10 @@
                                 </div>
                                 <div class="col-6 col-sm-4 col-lg-6 pt-2">
                                     <div class="w-75 btn-group" role="group">
-                                        <a class="btn btn-outline-primary bg-gradient py-2">
+                                        <a href="/Customer/Cart/Increment?productid=@item.Product.Id" class="btn btn-outline-primary bg-gradient py-2">
                                             <i class="bi bi-plus-square"></i>
                                         </a> &nbsp;
-                                        <a class="btn btn-outline-primary bg-gradient py-2">
+                                        <a href="/Customer/Cart/Decrement?productid=@item.Product.Id" class="btn btn-outline-primary bg-gradient py-2">
                                             <i class="bi bi-dash-square"></i>
                                         </a>
                                     </div>
@@ -68,15 +58,15 @@
                     <div class="col-md-4 offset-md-4">
                         <ul class="list-group mb-4">
                             <li class="d-flex justify-content-between align-items-center">
-                                <h5 class="text-dark fw-semibold text-uppercase"> Total (USD)</h5>
-                                <h4 class="text-dark fw-bolder">$$</h4>
+                                <h5 class="text-dark fw-semibold text-uppercase"> Total (EGP)</h5>
+                                <h4 class="text-dark fw-bolder">$@ViewBag.TotalPrice</h4>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-2 offset-md-5">
-                        <a href="#" class="btn btn-primary border-0 bg-gradient w-100 py-2">Summary</a>
+                        <a href="/Customer/Cart/Pay" class="btn btn-primary border-0 bg-gradient w-100 py-2">Pay</a>
                     </div>
                 </div>
             </div>
