--- a/E-Commerce511/Areas/Customer/Views/Home/Details.cshtml
+++ b/E-Commerce511/Areas/Customer/Views/Home/Details.cshtml
@@ -12,11 +12,15 @@
                 </div>
                 <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium at dolorem quidem modi. Nam sequi consequatur obcaecati excepturi alias magni, accusamus eius blanditiis delectus ipsam minima ea iste laborum vero?</p>
                 <div class="d-flex">
-                    <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
-                    <a href="/Customer/Cart/AddToCart?productId=@Model.Product.Id" class="btn btn-outline-dark flex-shrink-0">
-                        <i class="bi-cart-fill me-1"></i>
-                        Add to cart
-                    </a>
+
+                    <form action="/Customer/Cart/AddToCart">
+                        <input type="hidden" name="productId" value="@Model.Product.Id" />
+                        <input class="form-control text-center me-3" id="inputQuantity" type="number" name="count" value="1" style="max-width: 3rem" />
+                        <button type="submit" class="btn btn-outline-dark flex-shrink-0">
+                            <i class="bi-cart-fill me-1"></i>
+                            Add to cart
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
